compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__positional_argument_after_labelled.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Int, c: Int) }\nfn x() { X(b: 1, a: 1, 1) }"

---

error: Unexpected positional argument
  ┌─ /src/one/two.gleam:2:24
  │
2 │ fn x() { X(b: 1, a: 1, 1) }
  │                        ^

This unlablled argument has been supplied after a labelled argument.
Once a labelled argument has been supplied all following arguments must
also be labelled.

